# rust-exp01

./: .gitignore  Cargo.toml
baselib/: CMakeLists.txt  Cargo.toml  build.rs
baselib/cglib/: library.h
baselib/ffi/: library.cpp
baselib/ffi/sources/: testlib_01.cpp  testlib_01.h
baselib/src/: cheader.rs  lib.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
